Bug 425807 - Setting up Nextcloud account won't work
Summary: Setting up Nextcloud account won't work
Status: RESOLVED FIXED
Alias: None
Product: KAccounts
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 20.08
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Dan Leinir Turthra Jensen
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-08-25 20:54 UTC by Leon De Andrade
Modified: 2020-10-31 20:06 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Leon De Andrade 2020-08-25 20:54:04 UTC
SUMMARY

When setting up my server address a popup opens with "This site cannot be reached"

STEPS TO REPRODUCE
1. I add a new nextcloud account via system settings
2. I type in my server address https://myServer:port/nextcloud
3. A popup opens with this site (https://vmd42712.contaboserver.net:8443/nextcloud//index.php/login/flow) cannot be reached

OBSERVED RESULT

A popup with the site cannot be reached. It seems to me like the url is not correct. After "nextcloud" a double slash is added ... this can't be correct?

EXPECTED RESULT

The site can be reached and I can login into nextcloud
Comment 1 Bug Janitor Service 2020-09-21 17:52:26 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/kaccounts-providers/-/merge_requests/3
Comment 2 Nicolas Fella 2020-10-31 20:06:09 UTC
Git commit 534c90e9242fc42d86b11d189e8a0ae334fd369a by Nicolas Fella.
Committed on 31/10/2020 at 20:05.
Pushed by nicolasfella into branch 'master'.

Make (own|next)cloud url handling more resilient

Align the two so they are both resilient agains missing https and trailing slashes

A  +30   -0    plugins/cloudurls.h     [License: GPL(v2.0+)]
M  +3    -14   plugins/nextcloud-ui/nextcloudcontroller.cpp
M  +3    -19   plugins/owncloud-ui/owncloudcontroller.cpp

https://invent.kde.org/network/kaccounts-providers/commit/534c90e9242fc42d86b11d189e8a0ae334fd369a