Make (own|next)cloud url handling more resilient

Align the two so they are both resilient agains missing https and trailing slashes

BUG: 425807